# ex2_YuvalCarmeli_IdanLifshitz

./: CMakeLists.txt  Card.cpp  Mtmchkin.cpp  Mtmchkin.h  Player.cpp  Player.h
